--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   [href] { color: skyblue }
   ::selection { background: #ed3; color: #111 }
 
-  @media (prefers-color-scheme:dark) {
+  @media (prefers-color-scheme: light) {
     html { background: plum; color: #212; }
     [href] { color: midnightblue }
     ::selection { background: #315; color: #ed3 }
