viewport and beyond

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
+<meta name="theme-color" content="plum">
+<meta name="color-scheme" content="dark light">
 
 <title>"inside degrees" aplomb remix</title>
 
